@@ -262,7 +262,7 @@ Increment/Decrement
 
 Commands "incr" and "decr" are used to change data for some item
 in-place, incrementing or decrementing it. The data for the item is
-treated as decimal representation of a 32-bit unsigned integer. If the
+treated as decimal representation of a 64-bit unsigned integer. If the
 current data value does not conform to such a representation, the
 commands behave as if the value were 0. Also, the item must already
 exist for incr/decr to work; these commands won't pretend that a
@@ -279,7 +279,7 @@ decr <key> <value>\r\n
 - <key> is the key of the item the client wishes to change
 
 - <value> is the amount by which the client wants to increase/decrease
-the item. It is a decimal representation of a 32-bit unsigned integer.
+the item. It is a decimal representation of a 64-bit unsigned integer.
 
 The response will be one of:
 
@@ -289,8 +289,8 @@ The response will be one of:
   after the increment/decrement operation was carried out.
 
 Note that underflow in the "decr" command is caught: if a client tries
-to decrease the value below 0, the new value will be 0.  Overflow in the
-"incr" command will wrap around the 32 bit mark.
+to decrease the value below 0, the new value will be 0.  Overflow in
+the "incr" command will wrap around the 64 bit mark.
 
 Note also that decrementing a number such that it loses length isn't
 guaranteed to decrement its returned length.  The number MAY be
